--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h2>Experiencia Laboral</h2>
             <ul class="experience-list">
                 <li>
-                    <strong>Ayudante y acesor en Restaurante</strong> - (2023 - 2024)
+                    <strong>Ayudante y Acesor en Restaurante</strong> - (2023 - 2024)
                     
                 </li>
                 
