--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h2>Perfil</h2>
             <p>Estudiante de  quinto semestre en la carrera de Ingeniería en Sistemas de la Información con experiencia en lenguajes como Java , HTML, Python, CSS, JavaScript.</p>
             <hr>
-            <img src="foto.jpg" alt="Eddyy Santiago Zambrano briones" class="profile-pic">
+            <img src="foto.jpg" alt="Eddy Santiago Zambrano briones" class="profile-pic">
         </section>
         <section class="section">
             <h2>Experiencia Laboral</h2>
